[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.56"
axum = "0.5.10"
dotenv = "0.15.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
async-stripe = { version = "0.14", features = ["runtime-tokio-hyper"] }
strum = "0.24.1"
strum_macros = "0.24.2"
tokio = { version = "1.19.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["add-extension", "trace"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
uuid = { version = "1.1.2", features = ["v4"] }
lettre = { version = "0.10.0", default-features = false, features = ["smtp-transport", "tokio1", "native-tls", "tokio1-native-tls", "hostname", "builder"] }
